# auth_service_project

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
auth_service/auth_service/: settings.py  urls.py
auth_service/myauth/: serializers.py  urls.py  views.py
