[tool.poetry]
name = "auth-service-project"
version = "0.1.0"
description = ""
authors = ["Самир Багиров <samir_261999@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.2"
django-rest-framework = "^0.1.0"
gunicorn = "^21.2.0"
jwt = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"